alignment fixes with navbar

--- a/src/Main.sass
+++ b/src/Main.sass
@@ -10,18 +10,19 @@
     background-image: url(alonzo-wide.png)
     background-size: cover
     height: 500px
-    z-index: 0
+    z-index: 1
 
     .Main-photo-mask
       background: linear-gradient(to right, #Cf6766, rgba(255, 255, 255, 0) 60%)
       height: 500px
       opacity: 0.7
-      z-index: 1
+      z-index: 2
 
   .Main-photo-text-name
     margin-top: -300px
     margin-left: 12%
     background-color: #8EAEBD
+    /*background-color: #Cf6766*/
     color: white
     width: 300px
     height: 50px
@@ -48,19 +49,14 @@
 
 
   .header-banner
-    background: #666
+    /*background: #666*/
+    background: #Cf6766
     opacity: .98
-    display: flex
     height: 70px
     padding-left: 10%
     padding-right: 10%
 
-
-  footer
-    background: rgba(47,47,47,0.98)
-
-  header,
-  footer
+  header
     padding: 20px
     color: rgba(255,255,255,0.5)
     display: flex
@@ -104,12 +100,13 @@
           margin-top: 1px
           display: inline-block
     .github
-
+      margin-top: -10px
       display: flex
       text-align: right
       align-items: center
       padding-left: 100px
       .logo
+        margin-top: 0px
         color: #031424
         width: 60px
         padding: 10px
@@ -120,20 +117,23 @@
         margin-top: 7px
 
       ul
+        margin-top: 15px
         display: flex
         margin-left: -40px
 
         li
+
           margin: 0 20px
-          margin-top: 2px
+          margin-top: -4px
           display: inline-block
 
     .social
-
+      margin-top: -10px
       display: flex
       align-items: center
 
       .logo
+        margin-top: 2px
         color: #031424
         width: 60px
         padding: 10px
@@ -144,6 +144,7 @@
         margin-top: 7px
 
       ul
+        margin-top: 15px
         display: flex
         margin-left: -50px
 
@@ -153,29 +154,53 @@
           display: inline-block
 
         li:nth-of-type(2)
-          margin-top: -1px
+          margin-top: 0px
+          height: 30px
 
 
   .body
+    margin-top: 204px
     display: flex
     flex-grow: 1
-    background: pink
+    background: white
+    /*background: #Cf6766*/
 
     .col-content
-      background: linear-gradient(to right, rgba(255, 255, 255, 0), rgb(255, 255, 255))
+      background: linear-gradient(to right, #Cf6766, rgb(255, 255, 255))
       flex-grow: 1
+      align-items: center
+      text-align: center
+      z-index: 20
 
+      .card
+        background: linear-gradient(to right 0.9, white, blue)
+        height: 300px
+        width: 600px
+        margin: auto
+        margin-top: -30px
+        z-index: 21
+        /*box-shadow: 1px 1px 1px black*/
 
     .col-navigation
-      background: honeydew
+
       width: 160px
       order: -1
 
 
     .col-sidebar
-      background: peachpuff
+
       width: 160px
 
+footer
+  display: flex
+  flex-direction: column
+  height: 50px
+  background: #Cf6766
+  text-align: right
+  align-items: right
+
+  .copyright
+    text-align: center
 
 
 @media (max-width: 800px)
